# DiffusionLLM

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  TRAINING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: classroom-lab.md  method.md  upstream-review.md
examples/: chatmix_2m.json  classroom_smoke.sh
src/diffusion_llm/: __init__.py  __main__.py  attention.py  cli.py  collator.py  conversion.py  corruption.py  data.py  denoising_evaluation.py  evaluation.py  loading.py  mixture.py  modeling.py  provenance.py  sampling.py  schedule.py  tokenization.py  training.py  visualization.py
tests/: conftest.py  test_cli.py  test_conversion.py  test_corruption.py  test_data.py  test_denoising_evaluation.py  test_evaluation.py  test_mixture.py  test_modeling.py  test_sampling.py  test_schedule.py  test_training.py  test_visualization.py
